Fixed bottom margin of login screen on mobile devices

--- a/ressource/public/css/app.css
+++ b/ressource/public/css/app.css
@@ -49,6 +49,7 @@ body {
   background: #fff;
   padding: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 4px;
   border: 1px solid rgba(0,0,0,.2);
   box-shadow: 0 1px 1px rgba(0,0,0,.15);
